Fixes $.dropDown label so that it doesn't wrap to multiple lines.

--- a/tool-ui/src/main/webapp/style/cms.less
+++ b/tool-ui/src/main/webapp/style/cms.less
@@ -1858,6 +1858,9 @@ h1 select:focus {
     .text;
 
     display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 input[type="text"].dropDown-search {
